# chessviz-san4ous123

./: .gitignore  CMakeLists.txt  Makefile  chess.cpp
.github/workflows/: build.yml
src/: chesslib.cpp  main.cpp
src/chessviz/: main.cpp
src/include/: chesslib.hpp
src/libchessviz/: checkstroka.cpp  checkstroka.h  checktab.cpp  checktab.h  locate.cpp  locate.h  mistake.cpp  mistake.h  output.cpp  output.h
test/: test_list.cpp
